error.log
Traceback (most recent call last):
  File "D:/учеба/Мигребот/main.py", line 61, in main
    from migren import Migren
  File "D:\учеба\Мигребот\migren.py", line 88
    popupWindow=Popup(title='Выберите тип боли',content=Button(text:'zalupa'), size_hint=(None, None), size=(400,400))
                                                                   ^
SyntaxError: invalid syntax
